--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @hacxyzzy!
+  Fork me? Fork you hahaha, @hacxyzzy!
 </p>
 
 </body>
